# anygarden

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.design-sync/: NOTES.md  build-assets.sh  config.json  conventions.md
.githooks/: post-merge
scripts/: dev.ps1  test.ps1
worklogs/: 0106ccd-bump-drhub-drmachine-dragent-to-0-7-0.md  02d452f-bump-anygarden-agent-to-0-11-0.md  039-let-guests-autocomplete-every-participant.md  040-allow-admins-to-remove-room-participants.md  042-break-the-room-query-forwarding-loop.md  045-delete-room-ui-tighten-authz-ws-broadcast.md  048-hover-menu-for-rename-delete-room.md  051-drag-and-drop-reorder-for-pinned-sidebar-rooms.md  052-unify-participant-membership-joinroomout-broadcast.md  053-route-direct-typed-room-name-mentions-to-target-room.md  054-unify-agent-liveness-via-presenceservice-ui-indicator.md  055-structured-room-query-ux-with-banner-chips-and-result-car.md  058-topology-graph-view.md  061-unify-rest-metadata-field-name-prevent-duplicate-room.md  063-add-min-h-0-to-chatarea-wrapper-to-restore-inner-scroll.md  066-drop-orphan-pending-room-query-chips-after-7min-ttl.md  067-reset-turn-counter-on-self-emitted-task-init-in-agent.md  071-unify-agent-liveness-indicator-via-presencedot-status-color.md  073-add-typescript-agent-runtime-alongside-python.md  074-decouple-context-ingestion-from-response-gate.md  074-stage-b-ambient-context-window.md  077-delete-project-ui-api-cascade-confirmation.md  079-enforce-single-connection-per-participant.md  082-eliminate-node-re-render-flicker-on-hover.md  083-redesign-agent-node-with-name-engine-logo-and-running.md  084-harden-graph-polling-lifecycle-and-a11y.md  084-highlight-rooms-with-active-typing.md  093-fix-server-emit-utc-aware-iso-datetimes.md  (+247 more)
(+71 files in other folders)
