[project]
name = "doorae"
version = "0.1.0"
description = "Doorae — multi-agent chat platform (monorepo)"
authors = [{ name = "Changyong Um" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
doorae-agent = { workspace = true }
doorae-cluster = { workspace = true }
doorae-machine = { workspace = true }
