[project]
name = "doorae"
version = "0.1.0"
description = "Doorae — multi-agent chat platform (monorepo)"
authors = [{ name = "Changyong Um" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]
# Issue #73 — agent-ts is an npm-managed TypeScript package; it has
# no pyproject.toml. Exclude it from the uv workspace scan so the
# Python tooling doesn't fail the "member is missing pyproject.toml"
# precondition.
exclude = ["packages/agent-ts"]

[tool.uv.sources]
dragent = { workspace = true }
drhub = { workspace = true }
drmachine = { workspace = true }
